# ai-tools

./: .gitignore  CLAUDE.md  README.md  describe_image.py  edit_flux2.py  flux_edit.py  flux_generate.py  generate_flux2.py  main.py  mlx_describe_image.py  mlx_edit_flux2.py  mlx_generate_flux2.py  mlx_single_edit.py  pyproject.toml  qwen_generate.py  requirements.txt  z_generate.py
.claude/commands/claude/: cleanup.md
.claude/commands/git/: commit.md
.claude/skills/ai-image-tools/: SKILL.md
ai_tools/: __init__.py  flux_edit.py  flux_gen.py  qwen_gen.py  z_gen.py
docs/: architecture.md  flux2-constraints.md  mlx-implementation.md  pytorch-implementation.md  scripts-reference.md
igm/: __init__.py
igm/ai_tools/: flux_edit.py  flux_gen.py  mps_common.py  qwen3vl_desc.py  qwen_gen.py  z_gen.py
