[project]
name = "torch-mac"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "diffusers[torch]",
    "peft",
    "pillow>=12.1.0",
    "torch>=2.10.0",
    "transformers>=4.57.6",
]

[tool.uv.sources]
diffusers = { git = "https://github.com/huggingface/diffusers.git" }
