[project]
name = "ai-tools"
version = "0.1.0"
description = "AI image generation and editing CLI tools for Apple Silicon (MPS)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diffusers[torch]",
    "peft",
    "pillow>=12.1.0",
    "torch>=2.10.0",
    "transformers>=4.57.6",
]

[project.scripts]
igm.flux-gen = "ai_tools.flux_gen:main"
igm.flux-edit = "ai_tools.flux_edit:main"
igm.z-gen = "ai_tools.z_gen:main"
igm.qwen-gen = "ai_tools.qwen_gen:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai_tools"]

[tool.uv.sources]
diffusers = { git = "https://github.com/huggingface/diffusers.git" }
